2008-06-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Killing from the stack): Mention using normal Emacs
	copying.

2008-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Password handling): Renamed from "Password
	caching".  Add `auth-source' mechanism.
	(Connection caching): Tramp reopens the connection automatically,
	when the operating system on the remote host has been changed.

2008-06-20  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (distclean): Remove makefile.

2008-06-17  Carsten Dominik  <dominik@science.uva.nl>

	* org.texi (Using the mapping API): New section.
	(Agenda column view): New section.
	(Moving subtrees): Document archiving to the archive sibling.
	(Agenda commands): Document columns view in the agenda.
	(Using the property API): Document the API for multi-valued properties.

2008-06-17  Jason Riedy  <jason@acm.org>

	* org.texi (A LaTeX example): Note that fmt may be a one-argument
	function, and efmt may be a two-argument function.
	(Radio tables): Document multiple destinations.

2008-06-16  Glenn Morris  <rgm@gnu.org>

	* epa.texi, erc.texi, pgg.texi, remember.texi, sasl.texi, url.texi:
	Add Cover-Texts.

2008-06-15  Glenn Morris  <rgm@gnu.org>

	* faq.texi (VER): Update to 23.0.60.

	* mh-e.texi: Remove option of licensing under GPL.
	Add Cover-Texts to GFDL permissions notice.
	(GPL): Remove section.
	(GFDL): Include doclicense.texi rather than the actual text.

	* Makefile.in (INFO_TARGETS, DVI_TARGETS): Add sasl.
	(sasl, $(infodir)/sasl, sasl.dvi): New rules.

	* sasl.texi: Fix output file name.

	* epa.texi, sasl.texi: Refer to license in Emacs manual.

	* gnus-coding.texi: Refer to license in Gnus manual.

	* idlwave.texi, sasl.texi: Use @copying.

	* org.texi: Change to GFDL 1.2.  Refer to license in Emacs manual.

	* speedbar.texi: Update Back-Cover Text as per maintain.info.

	* url.texi: Use @copying, @title, @subtitle, @author.
