@@ -1680,7 +1680,7 @@
 	(isearch-hangul-switch-symbol-ksc, isearch-hangul-switch-hanja):
 	New functions.
 	(korean-key-bindings): Renamed from exit-korean-environment-data.
-	Initialized apropriately.
+	Initialized appropriately.
 	(setup-korean-environment): Setup key bindings according to
 	korean-key-bindings.
 	(exit-korean-environment): Revert key bindings only if the current
@@ -7157,7 +7157,7 @@
 	(select-safe-coding-system): New function.
 	(set-language-info): New optional args DESCRIBE-MAP and SETUP-MAP.
 	(set-language-info-alist): New optionla arg PARENTS.  Call
-	set-language-info with apropriate DESCRIBE-MAP and SETUP-MAP args.
+	set-language-info with appropriate DESCRIBE-MAP and SETUP-MAP args.
 	(set-language-environment-coding-systems): New function.
 
 	* international/mule-conf.el: Adjusted for the change of the
