@@ -1,3 +1,7 @@
+2008-06-28  Juanma Barranquero  <lekktu@gmail.com>
+
+	* sasl.texi (Mechanisms): Fix typos.
+
 2008-06-24  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc.texi (Killing from the stack): Mention using normal Emacs
@@ -5,8 +9,8 @@
 
 2008-06-21  Michael Albinus  <michael.albinus@gmx.de>
 
-	* tramp.texi (Password handling): Renamed from "Password
-	caching".  Add `auth-source' mechanism.
+	* tramp.texi (Password handling): Renamed from "Password caching".
+	Add `auth-source' mechanism.
 	(Connection caching): Tramp reopens the connection automatically,
 	when the operating system on the remote host has been changed.
 
